--- a/client/src/style/Home.scss
+++ b/client/src/style/Home.scss
@@ -5,18 +5,40 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  // background-attachment: fixed;
   height: 70vh;
   color: #fff;
+  text-align: center;
 
   .home-heading {
     text-align: center;
-    font-size: 60px;
-    padding-top: 100px;
+    font-size: 80px;
+
+    padding-top: 200px;
   }
 
   .home-subHeading {
     text-align: center;
     margin-top: 10px;
+
     font-size: 30px;
+  }
+
+  .home-btn {
+    text-decoration: none;
+    background-color: rgb(248, 172, 9);
+    padding: 10px;
+    font-size: 20px;
+    color: #fff;
+    border-radius: 10px;
+
+    margin-top: 30px;
+    display: inline-block;
+
+    transition: all 0.5s;
+
+    &:hover {
+      background-color: rgb(252, 194, 69);
+    }
   }
 }
