Added @media for responsive design and add form validatioin

--- a/client/src/style/Posts.scss
+++ b/client/src/style/Posts.scss
@@ -11,8 +11,23 @@
   .post-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
+    grid-gap: 20px;
     padding: 40px;
+    width: 80%;
+
+    @media (max-width: 1000px) {
+      .post-container {
+        background-color: red($color: #000000);
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+    @media (max-width: 800px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 600px) {
+      margin: 0 auto;
+      grid-template-columns: 1fr;
+    }
   }
 
   .card-a {
