--- a/client/src/style/EditPost.scss
+++ b/client/src/style/EditPost.scss
@@ -4,9 +4,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  // position: fixed;
   height: 100%;
-  width: 100%;
   text-align: center;
 
   .write-heading {
@@ -16,17 +14,7 @@
     font-size: 50px;
   }
 
-  .post-title {
-    font-size: 30px;
-  }
-
-  .input {
-    width: 500px;
-    font-size: 50;
-    padding: 10px;
-
-    @media (max-width: 600px) {
-      width: 70%;
-    }
+  .input-title {
+    font-size: 20px;
   }
 }
