--- a/client/src/style/EditPost.scss
+++ b/client/src/style/EditPost.scss
@@ -1,10 +1,34 @@
+// .write {
+//   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+//     url("../img/write-img.jpg");
+//   background-position: center;
+//   background-size: cover;
+//   background-repeat: no-repeat;
+//   height: 100%;
+//   width: 100%;
+//   text-align: center;
+
+//   .write-heading {
+//     color: #fff;
+//     text-align: center;
+//     padding-top: 90px;
+//     font-size: 50px;
+//   }
+
+//   .input-title {
+//     font-size: 20px;
+//   }
+// }
+
 .write {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
     url("../img/write-img.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  // position: fixed;
   height: 100%;
+  width: 100%;
   text-align: center;
 
   .write-heading {
@@ -14,7 +38,17 @@
     font-size: 50px;
   }
 
-  .input-title {
-    font-size: 20px;
+  .post-title {
+    font-size: 30px;
+  }
+
+  .input {
+    width: 500px;
+    font-size: 50;
+    padding: 10px;
+
+    @media (max-width: 600px) {
+      width: 70%;
+    }
   }
 }
