--- a/client/src/style/Post.scss
+++ b/client/src/style/Post.scss
@@ -13,6 +13,11 @@
     margin: 100px auto;
 
     background-color: #f3f3f3;
+
+    @media (max-width: 500px) {
+      margin: 100px 30px;
+      max-width: 100%;
+    }
   }
 
   .post-img {
@@ -20,6 +25,10 @@
     width: 80%;
     height: 400px;
     border-radius: 10px;
+
+    @media (max-width: 500px) {
+      height: 200px;
+    }
   }
 
   .post-heading {
